MPCPlayer wieder reaktiviert und den MPC Play Command darin verortet